Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
C13DRVAPI ERRVAL __stdcall C13_KernMEMCopyB(LPVOID destptr,LPVOID srcptr,USHORT countval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMFillW(USHORT value,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMRdB(LPBYTE valueptr,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMRdL(LPULONG valueptr,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMRdsL(LPULONG bufptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMRdsW(LPUSHORT bufptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMRdW(LPUSHORT valueptr,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMWrB(BYTE value,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMWrL(ULONG value,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMWrsL(LPULONG bufptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMWrsW(LPUSHORT bufptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernMEMWrW(USHORT value,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_KernStatus(LPULONG valueptr,ULONG type,ULONG index,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_ListAddr(INT index,LISTADDR listaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_ListAddrEx(INT index,LISTADDR listaddr,LPUSHORT header);
C13DRVAPI MSGADDR __stdcall C13_ListBlockRd(LPUSHORT buf,LISTADDR listaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_ListBlockRdEx(LPUSHORT buf,INT index,LISTADDR listaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_ListBlockWr(LPUSHORT buf,LISTADDR listaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_ListBlockWrEx(LPUSHORT buf,INT index,LISTADDR listaddr,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_ListClear(LISTADDR listaddr,HCARD handleval);
C13DRVAPI LISTADDR __stdcall C13_ListConfig(ULONG configval,INT count,USHORT skipval,HCARD handleval);
C13DRVAPI LISTADDR __stdcall C13_ListConfigEx(ULONG configval,INT count,USHORT skipval,HCARD handleval);
C13DRVAPI INT __stdcall C13_ListDataRdEx(LPUSHORT buf,INT count,INT index,LISTADDR listaddr,HCARD handleval);
C13DRVAPI INT __stdcall C13_ListDataWrEx(LPUSHORT buf,INT count,INT index,LISTADDR listaddr,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_ListInit(LISTADDR listaddr,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_ListNextRd(ULONG listaddr,LPUSHORT header);
C13DRVAPI MSGADDR __stdcall C13_ListNextWr(ULONG listaddr,LPUSHORT header);
C13DRVAPI VOID __stdcall C13_ListPostRd(LISTADDR listaddr,LPUSHORT header,HCARD handleval);
C13DRVAPI VOID __stdcall C13_ListPostWr(LISTADDR listaddr,LPUSHORT header,HCARD handleval);
C13DRVAPI VOID __stdcall C13_ListPreRd(LISTADDR listaddr,LPUSHORT header,HCARD handleval);
C13DRVAPI VOID __stdcall C13_ListPreWr(LISTADDR listaddr,LPUSHORT header,HCARD handleval);
C13DRVAPI INT __stdcall C13_ListStatus(LISTADDR listaddr,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MakeClientInfo(LPVOID ptr);
C13DRVAPI ULONG __stdcall C13_MakeLong(USHORT valh,USHORT vall);
C13DRVAPI LPVOID __stdcall C13_MakePtr(USHORT valh,USHORT vall);
C13DRVAPI ULONG __stdcall C13_Mask(ULONG dataval,USHORT cntval);
C13DRVAPI VOID __stdcall C13_MEMWINFillW(USHORT value,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MEMWINRdB(ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_MEMWINRdL(ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MEMWINRdsL(LPULONG valueptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MEMWINRdsW(LPUSHORT valueptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MEMWINRdW(ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MEMWINWrB(USHORT value,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MEMWINWrL(ULONG value,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MEMWINWrsL(LPULONG valueptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MEMWINWrsW(LPUSHORT valueptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MEMWINWrW(USHORT value,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_Mod(ULONG moda,ULONG modb);
C13DRVAPI BOOL __stdcall C13_ModeIsBC(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsMon(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsNotBC(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsNotMon(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsNotPlay(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsNotRT(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsNotSerial(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsPlay(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsRT(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsSerial(HCARD handleval);
C13DRVAPI USHORT __stdcall C13_ModeRd(HCARD handleval);
C13DRVAPI VOID __stdcall C13_ModeWr(USHORT mode,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_MonClear(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_MonConfigEx(ULONG configval,ULONG moncount,USHORT cardnum,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_MonConfigExx(ULONG configval,ULONG seqaddr,ULONG moncount,USHORT cardnum,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_MonFilterSAEx(INT taval,ULONG rcvsamask,ULONG xmtsamask,ULONG rcvmcmask,ULONG xmtmcmask,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MonRdEx(LPUSHORT buf,USHORT bufcount,HCARD handleval);
C13DRVAPI BOOL __stdcall C13_MonResume(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_MonStart(HCARD handleval);
C13DRVAPI INT __stdcall C13_MonStatus(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_MonStop(HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_MsgBlockRd(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);