Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32NET.VB

    Public Declare Function C13_KernMEMCopyB Lib "C13W32.DLL" Alias "_C13_KernMEMCopyB@12" (ByVal destptr As IntPtr, ByVal srcptr As IntPtr, ByVal countval As UInt16) As Int32
    Public Declare Function C13_KernMEMFillW Lib "C13W32.DLL" Alias "_C13_KernMEMFillW@20" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_KernMEMRdB Lib "C13W32.DLL" Alias "_C13_KernMEMRdB@16" (ByRef valueptr As Byte, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_KernMEMRdL Lib "C13W32.DLL" Alias "_C13_KernMEMRdL@16" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_KernMEMRdsL Lib "C13W32.DLL" Alias "_C13_KernMEMRdsL@20" (ByRef bufptr As UInt32, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_KernMEMRdsW Lib "C13W32.DLL" Alias "_C13_KernMEMRdsW@20" (ByRef bufptr As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_KernMEMRdW Lib "C13W32.DLL" Alias "_C13_KernMEMRdW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_KernMEMWrB Lib "C13W32.DLL" Alias "_C13_KernMEMWrB@16" (ByVal value As Byte, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_KernMEMWrL Lib "C13W32.DLL" Alias "_C13_KernMEMWrL@16" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_KernMEMWrsL Lib "C13W32.DLL" Alias "_C13_KernMEMWrsL@20" (ByRef bufptr As UInt32, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_KernMEMWrsW Lib "C13W32.DLL" Alias "_C13_KernMEMWrsW@20" (ByRef bufptr As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_KernMEMWrW Lib "C13W32.DLL" Alias "_C13_KernMEMWrW@16" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_KernStatus Lib "C13W32.DLL" Alias "_C13_KernStatus@16" (ByRef valueptr As UInt32, ByVal typeval As UInt32, ByVal index As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ListAddr Lib "C13W32.DLL" Alias "_C13_ListAddr@12" (ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_ListAddrEx Lib "C13W32.DLL" Alias "_C13_ListAddrEx@12" (ByVal index As Int32, ByVal listaddr As UInt32, ByRef header As UInt16) As UInt32
    Public Declare Function C13_ListBlockRd Lib "C13W32.DLL" Alias "_C13_ListBlockRd@12" (ByRef buf As UInt16, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_ListBlockRdEx Lib "C13W32.DLL" Alias "_C13_ListBlockRdEx@16" (ByRef buf As UInt16, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_ListBlockWr Lib "C13W32.DLL" Alias "_C13_ListBlockWr@12" (ByRef buf As UInt16, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_ListBlockWrEx Lib "C13W32.DLL" Alias "_C13_ListBlockWrEx@16" (ByRef buf As UInt16, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_ListClear Lib "C13W32.DLL" Alias "_C13_ListClear@8" (ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ListConfig Lib "C13W32.DLL" Alias "_C13_ListConfig@16" (ByVal configval As UInt32, ByVal count As Int32, ByVal skipval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_ListConfigEx Lib "C13W32.DLL" Alias "_C13_ListConfigEx@16" (ByVal configval As UInt32, ByVal count As Int32, ByVal skipval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_ListDataRdEx Lib "C13W32.DLL" Alias "_C13_ListDataRdEx@20" (ByRef buf As UInt16, ByVal count As Int32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ListDataWrEx Lib "C13W32.DLL" Alias "_C13_ListDataWrEx@20" (ByRef buf As UInt16, ByVal count As Int32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ListInit Lib "C13W32.DLL" Alias "_C13_ListInit@12" (ByVal listaddr As UInt32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ListNextRd Lib "C13W32.DLL" Alias "_C13_ListNextRd@8" (ByVal listaddr As UInt32, ByRef header As UInt16) As UInt32
    Public Declare Function C13_ListNextWr Lib "C13W32.DLL" Alias "_C13_ListNextWr@8" (ByVal listaddr As UInt32, ByRef header As UInt16) As UInt32
    Public Declare Sub C13_ListPostRd Lib "C13W32.DLL" Alias "_C13_ListPostRd@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C13_ListPostWr Lib "C13W32.DLL" Alias "_C13_ListPostWr@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C13_ListPreRd Lib "C13W32.DLL" Alias "_C13_ListPreRd@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C13_ListPreWr Lib "C13W32.DLL" Alias "_C13_ListPreWr@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Function C13_ListStatus Lib "C13W32.DLL" Alias "_C13_ListStatus@8" (ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Sub C13_MakeClientInfo Lib "C13W32.DLL" Alias "" (ByVal ptr As IntPtr)
    Public Declare Function C13_MakeLong Lib "C13W32.DLL" Alias "_C13_MakeLong@8" (ByVal valh As UInt16, ByVal vall As UInt16) As UInt32
    Public Declare Function C13_MakePtr Lib "C13W32.DLL" Alias "_C13_MakePtr@8" (ByVal valh As UInt16, ByVal vall As UInt16) As UInt32
    Public Declare Function C13_Mask Lib "C13W32.DLL" Alias "_C13_Mask@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Sub C13_MEMWINFillW Lib "C13W32.DLL" Alias "_C13_MEMWINFillW@20" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Function C13_MEMWINRdB Lib "C13W32.DLL" Alias "_C13_MEMWINRdB@12" (ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C13_MEMWINRdL Lib "C13W32.DLL" Alias "_C13_MEMWINRdL@12" (ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub C13_MEMWINRdsL Lib "C13W32.DLL" Alias "_C13_MEMWINRdsL@20" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub C13_MEMWINRdsW Lib "C13W32.DLL" Alias "_C13_MEMWINRdsW@20" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Function C13_MEMWINRdW Lib "C13W32.DLL" Alias "_C13_MEMWINRdW@12" (ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_MEMWINWrB Lib "C13W32.DLL" Alias "_C13_MEMWINWrB@16" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub C13_MEMWINWrL Lib "C13W32.DLL" Alias "_C13_MEMWINWrL@16" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub C13_MEMWINWrsL Lib "C13W32.DLL" Alias "_C13_MEMWINWrsL@20" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub C13_MEMWINWrsW Lib "C13W32.DLL" Alias "_C13_MEMWINWrsW@20" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub C13_MEMWINWrW Lib "C13W32.DLL" Alias "_C13_MEMWINWrW@16" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Function C13_Mod Lib "C13W32.DLL" Alias "_C13_Mod@8" (ByVal moda As UInt32, ByVal modb As UInt32) As UInt32
    Public Declare Function C13_ModeIsBC Lib "C13W32.DLL" Alias "_C13_ModeIsBC@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ModeIsMon Lib "C13W32.DLL" Alias "_C13_ModeIsMon@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ModeIsNotBC Lib "C13W32.DLL" Alias "_C13_ModeIsNotBC@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ModeIsNotMon Lib "C13W32.DLL" Alias "_C13_ModeIsNotMon@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ModeIsNotPlay Lib "C13W32.DLL" Alias "_C13_ModeIsNotPlay@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ModeIsNotRT Lib "C13W32.DLL" Alias "_C13_ModeIsNotRT@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ModeIsNotSerial Lib "C13W32.DLL" Alias "_C13_ModeIsNotSerial@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ModeIsPlay Lib "C13W32.DLL" Alias "_C13_ModeIsPlay@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ModeIsRT Lib "C13W32.DLL" Alias "_C13_ModeIsRT@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ModeIsSerial Lib "C13W32.DLL" Alias "_C13_ModeIsSerial@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_ModeRd Lib "C13W32.DLL" Alias "_C13_ModeRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_ModeWr Lib "C13W32.DLL" Alias "_C13_ModeWr@8" (ByVal mode As UInt16, ByVal handleval As UInt32)
    Public Declare Function C13_MonClear Lib "C13W32.DLL" Alias "_C13_MonClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_MonConfigEx Lib "C13W32.DLL" Alias "_C13_MonConfigEx@16" (ByVal configval As UInt32, ByVal moncount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_MonConfigExx Lib "C13W32.DLL" Alias "_C13_MonConfigExx@20" (ByVal configval As UInt32, ByVal seqaddr As UInt32, ByVal moncount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_MonFilterSAEx Lib "C13W32.DLL" Alias "_C13_MonFilterSAEx@24" (ByVal taval As Int32, ByVal rcvsamask As UInt32, ByVal xmtsamask As UInt32, ByVal rcvmcmask As UInt32, ByVal xmtmcmask As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_MonRdEx Lib "C13W32.DLL" Alias "_C13_MonRdEx@12" (ByRef buf As UInt16, ByVal bufcount As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function C13_MonResume Lib "C13W32.DLL" Alias "_C13_MonResume@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_MonStart Lib "C13W32.DLL" Alias "_C13_MonStart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_MonStatus Lib "C13W32.DLL" Alias "_C13_MonStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_MonStop Lib "C13W32.DLL" Alias "_C13_MonStop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_MsgBlockRd Lib "C13W32.DLL" Alias "_C13_MsgBlockRd@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
